# news_aggregator

./: .env.test  Cargo.lock~add sync job  Cargo.toml  LICENSE  README.md  docker-compose-test.yml  docker-compose.yml
mongodb-init/: init_sources.json
scripts/: environment.rb  seed_mongo.rb
src/: config.rs  http_client.rs  main.rs  model.rs  repository.rs
src/article/: article.rs  convert.rs  mod.rs  view.rs
src/category/: category.rs
src/db/: connection.rs
src/handlers/: article_handler.rs  mod.rs  source_handler.rs
src/jobs/: mod.rs  sync_feeds_job.rs
src/rss/: mod.rs  parser.rs  rss_item.rs
src/source/: codes.rs  mod.rs  source.rs
src/source/parser/: mod.rs  parser.rs  rbc.rs  rss_structure.rs
test/test_data/: correct_rss_xml.xml  incorrect_rss_xml.xml
