[package]
name = "news_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.51"
mongodb = "2.0.2"
redis = { version = "0.21.4", features = ["tokio-comp", "connection-manager"] }
actix-web = "4.0.0-beta.11"
tokio = "1.14.0"
tokio-stream = "0.1.8"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.130"
serde_json = "1.0.71"
dotenv = "0.15.0"
derive_more = "0.99.16"
env_logger = "0.9.0"
mime = "0.3.16"
quick-xml= { version = "0.22.0", features = ["serialize"] }
futures = "0.3"
md5 = "0.7.0"
rss = "2.0"